Add more recent events

--- a/assets/events.toml
+++ b/assets/events.toml
@@ -78,14 +78,23 @@
 "1648 AD" = "Thirty Years' War ends"
 "1763 AD" = "Seven Years' War ends"
 "1812 AD" = "Napoleonic France at peak territorial control"
+"1848 AD" = "Revolutions of 1848"
 "1871 AD" = "Unification of Germany after the Franco-Prussian war"
 "1914 AD" = "World War I begins"
 # "1918 AD" = "World War I ends"
-"1939 AD" = "World War II begins"
-"1945 AD" = "World War II ends"
+"1939 AD" = "World War II - Germany invades Poland"
+"1945 AD" = "World War II - Atomic bombings of Hiroshima and Nagasaki"
+"1953 AD" = "Korean War ceasefire"
 "1962 AD" = "Cuban Missile Crisis"
+"1969 AD" = "Apollo 11 - first crewed Moon landing"
+"1975 AD" = "Vietnam War ends"
+"1981 AD" = "HIV pandemic"
 "1991 AD" = "Dissolution of the Soviet Union"
+"1995 AD" = "Bosnian War ends with Dayton Agreement"
 "2001 AD" = "September 11 attacks"
+"2004 AD" = "2004 Indian Ocean earthquake and tsunami"
+"2008 AD" = "Great Recession"
+"2010 AD" = "Arab Spring starts"
 "2015 AD" = "ISIS at peak territorial control"
 "2020 AD" = "COVID-19 pandemic"
 "2022 AD" = "Russia invades Ukraine"
