Add month and day support

--- a/assets/events.toml
+++ b/assets/events.toml
@@ -83,18 +83,24 @@
 "1914 AD" = "World War I begins"
 # "1918 AD" = "World War I ends"
 "1939 AD" = "World War II - Germany invades Poland"
-"1945 AD" = "World War II - Atomic bombings of Hiroshima and Nagasaki"
-"1953 AD" = "Korean War ceasefire"
-"1962 AD" = "Cuban Missile Crisis"
-"1969 AD" = "Apollo 11 - first crewed Moon landing"
-"1975 AD" = "Vietnam War ends"
-"1981 AD" = "HIV pandemic"
-"1991 AD" = "Dissolution of the Soviet Union"
-"1995 AD" = "Bosnian War ends with Dayton Agreement"
-"2001 AD" = "September 11 attacks"
-"2004 AD" = "2004 Indian Ocean earthquake and tsunami"
+"1945-08 AD" = "World War II - Atomic bombings of Hiroshima and Nagasaki"
+"1953-07-27 AD" = "Korean War - Armistice Agreement"
+# "1956-10-29 AD" = "Suez Crisis" # beginning
+"1962-10 AD" = "Cuban Missile Crisis"
+"1969-07-20 AD" = "Apollo 11 - first crewed Moon landing"
+"1975-04-30 AD" = "Vietnam War ends"
+"1981-06-05 AD" = "HIV pandemic"
+"1991-12-26 AD" = "Dissolution of the Soviet Union"
+"1995-10-14 AD" = "Bosnian War ends with Dayton Agreement" # signed
+"2001-09-11 AD" = "September 11 attacks"
+"2004-12-26 AD" = "2004 Indian Ocean earthquake and tsunami"
 "2008 AD" = "Great Recession"
-"2010 AD" = "Arab Spring starts"
-"2015 AD" = "ISIS at peak territorial control"
-"2020 AD" = "COVID-19 pandemic"
-"2022 AD" = "Russia invades Ukraine"
+"2010-12-17 AD" = "Arab Spring starts"
+"2015-05 AD" = "ISIS at peak territorial control" # https://en.wikipedia.org/wiki/File:Islamic_State_(May_2015)_(orthographic_projection).png
+"2016-11-08 AD" = "Trump wins 2016 US presidential election"
+"2020-03-11 AD" = "COVID-19 pandemic" # declared a pandemic; identified earlier
+"2020-11-03 AD" = "Tigray War begins"
+"2021-01-06 AD" = "January 6 Capitol attack"
+"2021-08-30 AD" = "War in Afghanistan ends"
+"2022-02-24 AD" = "Russia invades Ukraine"
+"2022-11-03 AD" = "Tigray War ends"
