Added more events

--- a/assets/events.toml
+++ b/assets/events.toml
@@ -1,17 +1,23 @@
 "13.787 bya" = "Big Bang"
 # "13.6 bya" = "First confimed star, SMSS J0313−6708"
+"11 bya" = "Milky Way merges with the Kraken (Recent hypothesis)"
+"9.8 bya" = "Andromeda Galaxy forms from a galactic merger"
+"6.9 bya" = "Arcturus forms"
 "4.6 bya" = "Formation and evolution of the Solar System"
 # "4.54 bya" = "Earth is formed"
 # "4.5 bya" = "Theia impacts Earth, forming the Moon"
 "4.1 bya" = "Earliest known life forms"
+"3.5 bya" = "Hypothesised last universal ancestor (of bacteria and archaea)"
 # "2.5 bya" = "Huronian glaciation"
 "2.460 bya" = "Great Oxidation Event"
-"2.2 bya" = "Huronian glaciation ends"
+# "2.2 bya" = "Huronian glaciation ends"
+"2.1 bya" = "Earliest eukaryote fossils"
 
 # https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1689654/
 "1.576 bya" = "Plants, animals, and fungi diverge"
 
 "1.26 bya" = "Rodinia starts to form"
+"830 mya" = "First rifts on Rodinia, starting to break apart"
 "760 mya" = "First Animalia"
 # "717 mya" = "Sturtian glaciation begins"
 "650 mya" = "Pannotia forms"
@@ -26,26 +32,39 @@
 # "259 mya" = "Capitanian mass extinction event"
 # "255 mya" = "Late Paleozoic icehouse ends"
 "251.9 mya" = "Permian–Triassic extinction event, aka the \"Great Dying\""
-"201.4 mya" = "Triassic–Jurassic extinction event"
-# "200 mya" = "Pangaea begins to break up"
+"233.23 mya" = "First dinosaurs" # between 243 and 233.23
+"201.4 mya" = "Triassic–Jurassic extinction event, caused by Central Atlantic magmatic province"
+"180 mya" = "Pangaea splits into Laurasia and Gondwana"
+"155 mya" = "Earliest avialans (Archaeopteryx), ancestors of birds"
+"130 mya" = "Earliest angiosperms (flowering plants)"
+"90 mya" = "India separates from Madagascar"
 # "66.25 mya" = "Deccan Traps"
 "66.043 mya" = "Cretaceous–Paleogene extinction event, non-avian dinosaurs are extinct"
+"55 mya" = "Laurasia splits into Laurentia and Eurasia" # actually 60–55
+"35 mya" = "India begins to collide with Asia"
 "25 mya" = "Apes diverge from the Old World monkeys"
 "18 mya" = "Great apes diverge from gibbons"
-"14 mya" = "Hominins diverge from orangutans"
-"7 mya" = "Hominini diverge from gorillas"
-"5 mya" = "Humans diverge from chimpanzees" # actually 3-5
+"14 mya" = "Hominins diverge from orangutans (Pongo)"
+"7 mya" = "Hominini diverge from gorillas (Gorilla)"
+"5 mya" = "Humans diverge from chimpanzees (Pan)" # actually 3-5
 "4.2 mya" = "Earliest Australopithecus"
 "3.4 mya" = "Earliest stone tools"
 "2.75 mya" = "LD 350-1, earliest known specimen of genus Homo"
 "2.12 mya" = "Out of Africa I - human presence in China"
 "1.8 mya" = "Oldest known human skeletal remains outside of Africa (Homo erectus)"
-"430 kya" = "Earliest neanderthals (rough date)"
+"1 mya" = "Homo antecessor, last common ancestor of modern humans and Neanderthals" # 1.2 - 0.8 mya
+"430 kya" = "Earliest Neanderthals (rough date)"
+"300 kya" = "Levallois technique of knapping used by Neanderthals in Europe"
+"285 kya" = "Earliest Denisovans"
 "250 kya" = "Out of Africa II - Homo sapiens" # 300-200 kya
+"160 kya" = "Mousterian (Neanderthal) culture in Europe"
 "108 kya" = "The last known population of Homo erectus on Java goes extinct"
+"74 kya" = "Toba eruption, which may have caused a genetic bottleneck in humans"
 "65 kya" = "Human migration to Australia"
+"52 kya" = "Latest remains of Denisovans"
 "40 kya" = "Neanderthal extinction"
-"26.5 kya" = "Last Glacial Maximum begins"
+"26.5 kya" = "Last Glacial Maximum"
+# "25 kya" = "Oldest permanent human settlement (at Dolní Věstonice)"
 "20 kya" = "Last Glacial Maximum ends"
 "17 kya" = "Human migration to the Americas" # though estimates range from 15k to (newer estimate) 25k
 "14.6 kya" = "African humid period begins"
@@ -54,7 +73,7 @@
 "10.5 kya" = "Cattle domesticated"
 "8.2 kya" = "8.2-kiloyear event (sudden cooling)"
 # "5.5 kya" = "African humid period ends"
-"3500 BC" = "First cuneiform; african humid period ends; horse domesticated"
+"3500 BC" = "First cuneiform; african humid period ends; horse domesticated; PIE spoken"
 # "3250 BC" = "First hieroglyphics"
 "2600 BC" = "Great Pyramid of Giza"
 "4.2 kya" = "4.2-kiloyear event (sudden aridification)"
