Add more events

--- a/assets/events.toml
+++ b/assets/events.toml
@@ -97,10 +97,12 @@
 # "1517 AD" = "Protestant Reformation - Martin Luther publishes the Ninety-five Theses"
 "1566 AD" = "Suleiman the Great dies"
 "1648 AD" = "Thirty Years' War ends"
+"1721 AD" = "Peter the Great proclaimed Emperor of Russia"
 "1763 AD" = "Seven Years' War ends"
 "1812 AD" = "Napoleonic France at peak territorial control"
 "1848 AD" = "Revolutions of 1848"
 "1871 AD" = "Unification of Germany after the Franco-Prussian war"
+"1896-04 AD" = "1896 Summer Olympics in Athens, first in modern history"
 "1914 AD" = "World War I begins"
 # "1918 AD" = "World War I ends"
 "1939 AD" = "World War II - Germany invades Poland"
@@ -115,13 +117,22 @@
 "1995-10-14 AD" = "Bosnian War ends with Dayton Agreement" # signed
 "2001-09-11 AD" = "September 11 attacks"
 "2004-12-26 AD" = "2004 Indian Ocean earthquake and tsunami"
+# "2007-06 AD" = "Hamas takeover of Gaza"
 "2008 AD" = "Great Recession"
 "2010-12-17 AD" = "Arab Spring starts"
+"2014-03-18 AD" = "Russia annexes Crimea"
 "2015-05 AD" = "ISIS at peak territorial control" # https://en.wikipedia.org/wiki/File:Islamic_State_(May_2015)_(orthographic_projection).png
 "2016-11-08 AD" = "Trump wins 2016 US presidential election"
+"2018-07 AD" = "2018 Russian pension protests"
+"2019-06-09 AD" = "Hong Kong protests begin"
 "2020-03-11 AD" = "COVID-19 pandemic" # declared a pandemic; identified earlier
-"2020-11-03 AD" = "Tigray War begins"
+# "2020-11-03 AD" = "Tigray War begins"
 "2021-01-06 AD" = "January 6 Capitol attack"
+# "2021-02-01 AD" = "Coup and subsequent civil war in Myanmar"
 "2021-08-30 AD" = "War in Afghanistan ends"
 "2022-02-24 AD" = "Russia invades Ukraine"
 "2022-11-03 AD" = "Tigray War ends"
+"2023-02-06 AD" = "2023 Turkey–Syria earthquakes"
+"2023-06-23 AD" = "Wagner Group rebellion"
+# "2023-09-20 AD" = "Azerbaijan takes control over Nagorno-Karabakh"
+"2023-10-07 AD" = "7 October attack in Israel, starting the Israel–Hamas war"
