Add temperature scale and events

--- a/assets/events.toml
+++ b/assets/events.toml
@@ -8,6 +8,7 @@
 # "4.5 bya" = "Theia impacts Earth, forming the Moon"
 "4.1 bya" = "Earliest known life forms"
 "3.5 bya" = "Hypothesised last universal ancestor (of bacteria and archaea)"
+"2.9 bya" = "Pongola glaciation"
 # "2.5 bya" = "Huronian glaciation"
 "2.460 bya" = "Great Oxidation Event"
 # "2.2 bya" = "Huronian glaciation ends"
@@ -55,17 +56,24 @@
 "1.8 mya" = "Oldest known human skeletal remains outside of Africa (Homo erectus)"
 "1 mya" = "Homo antecessor, last common ancestor of modern humans and Neanderthals" # 1.2 - 0.8 mya
 "0.7 mya" = "Last reversal of the Earth's magnetic field"
-"430 kya" = "Earliest Neanderthals (rough date)"
-"300 kya" = "Levallois technique of knapping used by Neanderthals in Europe"
+# "430 kya" = "Earliest Neanderthals (rough date)"
+"450 kya" = "Elster glaciation" # 500-400
+"408 kya" = "Holstein interglacial" # 421-395
+# "300 kya" = "Levallois technique of knapping used by Neanderthals in Europe"
 "285 kya" = "Earliest Denisovans"
 "250 kya" = "Out of Africa II - Homo sapiens" # 300-200 kya
+"194 kya" = "Penultimate Glacial Period"
 "160 kya" = "Mousterian (Neanderthal) culture in Europe"
+# "150 kya" = "Peopling of Africa, Khoisan mtDNA haplogroup first to differentiate"
+"135 kya" = "Penultimate Glacial Period ends"
+"125 kya" = "Last Interglacial Period, aka the Eemian" # 130-115 kya
 "108 kya" = "The last known population of Homo erectus on Java goes extinct"
 "74 kya" = "Toba eruption, which may have caused a genetic bottleneck in humans"
-"65 kya" = "Human migration to Australia"
+"65 kya" = "Human migrations reach Australia"
 "52 kya" = "Latest remains of Denisovans"
 "40 kya" = "Neanderthal extinction"
 "26.5 kya" = "Last Glacial Maximum"
+"22 kya" = "Last unified archaeological culture in Europe (Gravettian culture) splits"
 # "25 kya" = "Oldest permanent human settlement (at Dolní Věstonice)"
 "20 kya" = "Last Glacial Maximum ends"
 "17 kya" = "Human migration to the Americas" # though estimates range from 15k to (newer estimate) 25k
