Add more modern data

--- a/assets/events.toml
+++ b/assets/events.toml
@@ -113,6 +113,8 @@
 "1896-04 AD" = "1896 Summer Olympics in Athens, first in modern history"
 "1914 AD" = "World War I begins"
 # "1918 AD" = "World War I ends"
+"1929-10 AD" = "Great Depression" # starting with the Wall Street Crash of 1929
+# "1931-09-18 AD" = "Japanese invasion of Manchuria"
 "1939 AD" = "World War II - Germany invades Poland"
 "1945-08 AD" = "World War II - Atomic bombings of Hiroshima and Nagasaki"
 "1953-07-27 AD" = "Korean War - Armistice Agreement"
