Extend rectangles for spans without children

--- a/assets/events.toml
+++ b/assets/events.toml
@@ -10,7 +10,7 @@
 "3.5 bya" = "Hypothesised last universal ancestor (of bacteria and archaea)"
 "2.9 bya" = "Pongola glaciation"
 # "2.5 bya" = "Huronian glaciation"
-"2.460 bya" = "Great Oxidation Event"
+"2.460 bya" = "Great Oxidation Event, likely causing the Huronian Glaciation"
 # "2.2 bya" = "Huronian glaciation ends"
 "2.1 bya" = "Earliest eukaryote fossils"
 
